tenzir/bats/data/reference/pipelines_local/test_parse_operators/step_16.ref
error: the file `foo.json` does not exist
 --> <input>:1:11
  |
1 | load file foo.json | read json
  |           ^^^^^^^^ 
  |